--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,11 +4,15 @@ on:
   push:
     branches: [main]
     paths:
-      - 'index.html'  # Only trigger when index.html changes
+      - 'index.html'
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
 
     steps:
       - name: Checkout code
@@ -20,7 +24,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: .  # upload everything in the current directory (including index.html)
+          path: .
 
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v2
