--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [main]
     paths:
-      - 'index.html'
+      - 'index.html'  # Only trigger when index.html changes
 
 jobs:
   deploy:
@@ -18,13 +18,23 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Pages
+      - name: Configure GitHub Pages
         uses: actions/configure-pages@v3
 
-      - name: Upload artifact
+      - name: Build static site (optional)
+        run: |
+          # Add build commands here if needed
+          echo "No build needed for raw HTML"
+
+      - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: .
+          path: .  # Deploy entire repository contents
+          # or specify specific files:
+          # path: |
+          #   index.html
+          #   styles.css
+          #   assets/
 
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v2
